--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ logging:
       sonam: debug
 info:
   app:
-    name: Springboot me.sonam.Application
+    name: Springboot me.sonam.account.Application
     description: This is a Springboot application
     version: 1.0.0
 
