--- a/values.yaml
+++ b/values.yaml
@@ -5,8 +5,8 @@
 replicaCount: 1
 
 image:
-  repository: imageregistry.sonam.me/email-rest-service
-  tag: "1.1"
+  repository: imageregistry.sonam.me/account-rest-service
+  tag: "1.0"
   pullPolicy: Always
 
 imagePullSecrets:
@@ -50,7 +50,7 @@ ingress:
     #cert-manager.io/issuer: letsencrypt-nginx
 
   hosts:
-    - host: email-api.sonam.cloud
+    - host: account-api.sonam.cloud
       paths:
         - path: /
           pathType: Prefix
@@ -58,9 +58,6 @@ ingress:
     - secretName: sonam.cloud
       hosts:
         - "*.sonam.cloud"
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
@@ -80,9 +77,15 @@ tolerations: []
 
 affinity: {}
 
+postgres:
+  secretfile: sonam.account-minimal-cluster.credentials.postgresql.acid.zalan.do
+  service: "account-minimal-cluster"
+  dbname: "account"
+  port: "5432"
+
+
 envs:
-  - name: SPRING_PROFILES_ACTIVE
-    value: "prod"
+
 
 health:
   liveness:
