--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -23,3 +23,8 @@ spring:
     url: r2dbc:h2:mem:///contentitem?options=DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
     name: sa
     password:
+
+POSTGRES_USERNAME: dusername
+POSTGRES_DBNAME: dbname
+POSTGRES_SERVICE: dservice
+POSTGRES_PASSWORD: dpassword
