add deploy yaml

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,5 +22,5 @@ spring:
     url: r2dbc:postgresql://${POSTGRES_SERVICE}/${POSTGRES_DBNAME}
     username: ${POSTGRES_USERNAME}
     password: ${POSTGRES_PASSWORD}
-#    properties:
-#      sslMode: REQUIRE
+    properties:
+      sslMode: REQUIRE
