--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Update SHA
-        run: echo $GITHUB_SHA > $GITHUB_WORKSPACE/site/_meta
+        run: echo $GITHUB_SHA > $GITHUB_WORKSPACE/shafile.txt
 
       - name: Build container image
         run: docker build -t ${{ secrets.IMAGEREGISTRY }}/$PROJECT_NAME:$(echo $GITHUB_SHA | head -c7) .
