--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
         run: echo $GITHUB_SHA > $GITHUB_WORKSPACE/shafile.txt
 
       - name: Build container image
-        run: docker build -t ${{ secrets.IMAGEREGISTRY }}/$PROJECT_NAME:$(echo $GITHUB_SHA | head -c7) .
+        run: docker build -t ${{ secrets.IMAGEREGISTRY }}/$(echo ${{ github.repository }} | cut -d / -f2):$(echo $GITHUB_SHA | head -c7) .
 
       - name: Install doctl
         uses: digitalocean/action-doctl@v2
@@ -31,7 +31,7 @@ jobs:
         run: echo ${{ secrets.IMAGEREGISTRY_PASSWORD }} | docker login ${{ secrets.IMAGEREGISTRY }} -u {{ secrets.IMAGEREGISTRY_USERNAME }}
 
       - name: Push image to my container registry
-        run:  docker push ${{ secrets.IMAGEREGISTRY }}/$PROJECT_NAME:(echo $GITHUB_SHA | head -c7)
+        run:  docker push ${{ secrets.IMAGEREGISTRY }}/$(echo ${{ github.repository }} | cut -d / -f2):(echo $GITHUB_SHA | head -c7)
 
       - name: Save DigitalOcean kubeconfig with short-lived credentials
         run: doctl kubernetes cluster kubeconfig save --expiry-seconds 600 ${{ secrets.K8CLUSTER_NAME }}
