--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
         run: echo $GITHUB_SHA > $GITHUB_WORKSPACE/shafile.txt
 
       - name: Build container image
-        run: docker build -t ${{ secrets.IMAGEREGISTRY }}/$(echo ${{ github.repository }} | cut -d / -f2):$(echo $GITHUB_SHA | head -c7) .
+        run: docker build -t ${{ secrets.IMAGEREGISTRY }}/$(echo ${{ github.repository }} | cut -d / -f2):1 .
 
       - name: Install doctl
         uses: digitalocean/action-doctl@v2
@@ -31,7 +31,7 @@ jobs:
         run: docker login ${{ secrets.IMAGEREGISTRY }} -u ${{ secrets.IMAGEREGISTRY_USERNAME }} -p ${{ secrets.IMAGEREGISTRY_PASSWORD }}
 
       - name: Push image to my container registry
-        run:  docker push ${{ secrets.IMAGEREGISTRY }}/$(echo ${{ github.repository }} | cut -d / -f2):$(echo $GITHUB_SHA | head -c7)
+        run:  docker push ${{ secrets.IMAGEREGISTRY }}/$(echo ${{ github.repository }} | cut -d / -f2):1
 
       - name: Save DigitalOcean kubeconfig with short-lived credentials
         run: doctl kubernetes cluster kubeconfig save --expiry-seconds 600 ${{ secrets.K8CLUSTER_NAME }}
@@ -40,9 +40,11 @@ jobs:
         run: |
           export PROJECT_NAME=$(echo ${{ github.repository }} | cut -d / -f2)
           helm repo add sonam https://sonamsamdupkhangsar.github.io/sonam-helm-chart/
-          helm install --timeout 5m0s \
+          helm upgrade --install --timeout 5m0s \
             --set "image.repository=${{ secrets.IMAGEREGISTRY }}/$PROJECT_NAME" \
-            --set "image.tag=${{ github.sha }}" \
+            --set "image.tag=1" \
+            --"project=$PROJECT_NAME" \
+             $PROJECT_NAME \
             sonam/mychart -f values.yaml --version 0.1.12 --namespace=backend
 
 
