--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,6 @@
 on:
   push:
     branches:
-      - develop
       - main
 
 jobs:
@@ -16,22 +15,38 @@ jobs:
       - name: Checkout main
         uses: actions/checkout@v2
 
-      - name: Update SHA
-        run: echo $GITHUB_SHA > $GITHUB_WORKSPACE/shafile.txt
+      - name: Setup Open JDK 17
+        uses: actions/setup-java@v2
+        with:
+          java-version: '17'
+          distribution: 'adopt'
 
-      - name: Build container image
-        run: docker build -t ${{ secrets.IMAGEREGISTRY }}/$(echo ${{ github.repository }} | cut -d / -f2):1 .
+      - name: Publish package
+        run: mvn --batch-mode deploy
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Log in to the Container registry
+        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+
+      - name: Build Docker image and push to ghcr.io registry
+        id: docker_build
+        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+        with:
+          context: .
+          push: true
+          tags: ghcr.io/sonamsamdupkhangsar/account-rest-service:latest
+          secrets: |
+            GIT_AUTH_TOKEN=${{ secrets.PERSONAL_ACCESS_TOKEN }}
 
       - name: Install doctl
         uses: digitalocean/action-doctl@v2
         with:
           token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
-
-      - name: Log in to my container registery
-        run: docker login ${{ secrets.IMAGEREGISTRY }} -u ${{ secrets.IMAGEREGISTRY_USERNAME }} -p ${{ secrets.IMAGEREGISTRY_PASSWORD }}
-
-      - name: Push image to my container registry
-        run:  docker push ${{ secrets.IMAGEREGISTRY }}/$(echo ${{ github.repository }} | cut -d / -f2):1
 
       - name: Save DigitalOcean kubeconfig with short-lived credentials
         run: doctl kubernetes cluster kubeconfig save --expiry-seconds 600 ${{ secrets.K8CLUSTER_NAME }}
@@ -41,13 +56,13 @@ jobs:
           export PROJECT_NAME=$(echo ${{ github.repository }} | cut -d / -f2)
           helm repo add sonam https://sonamsamdupkhangsar.github.io/sonam-helm-chart/
           helm upgrade --install --timeout 5m0s \
-            --set "image.repository=${{ secrets.IMAGEREGISTRY }}/$PROJECT_NAME" \
-            --set "image.tag=1" \
+            --set "image.repository=ghcr.io/sonamsamdupkhangsar/$PROJECT_NAME" \
+            --set "image.tag=latest" \
             --set "project=$PROJECT_NAME" \
             --set "postgres.secretfile=${{ secrets.POSTGRES_SECRET_FILE }}" \
             --set "postgres.service=${{ secrets.POSTGRES_SERVICE }}" \
             --set "postgres.dbname=${{ secrets.POSTGRES_DBNAME }}" \
              $PROJECT_NAME \
-            sonam/mychart -f values-backend.yaml --version 0.1.13 --namespace=backend
+            sonam/mychart -f values-backend.yaml --version 0.1.15 --namespace=backend
 
 
