set distribution management in pom

--- a/pom.xml
+++ b/pom.xml
@@ -86,4 +86,12 @@
             </plugin>
         </plugins>
     </build>
+
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub OWNER Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/sonamsamdupkhangsar/account-rest-service</url>
+        </repository>
+    </distributionManagement>
 </project>
