add account creation, validation of secrets and email

--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,18 @@
             <artifactId>springdoc-openapi-webflux-ui</artifactId>
             <version>1.4.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>4.0.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>mockwebserver</artifactId>
+            <version>4.0.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
