--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,3 +24,9 @@ spring:
     password: ${POSTGRES_PASSWORD}
     properties:
       sslMode: REQUIRE
+
+email-rest-service: https://email-rest-service.sonam.cloud/email
+emailFrom: ""
+account-activate-link: https://account-rest-service.sonam.cloud/accounts/activate
+emailBody: Please click on this link to activate your account
+secretExpire: 2
