--- a/values-backend.yaml
+++ b/values-backend.yaml
@@ -44,9 +44,23 @@ istio:
 ingress:
   enabled: true
   ingressClass: nginx
-  #annotations:
-    #cert-manager.io/issuer: letsencrypt-nginx
+  hosts:
+    - host: account-rest-service.sonam.cloud
+      paths:
+        - path: /public
+          pathType: Prefix
+  tls:
+    - secretName: sonam.cloud
+      hosts:
+        - "*.sonam.cloud"
 
+ingressjwtrequired:
+  enabled: true
+  ingressClass: nginx
+  annotations:
+    nginx.ingress.kubernetes.io/auth-url: http://jwt-rest-service-mychart.backend.svc.cluster.local:80/validate
+    # pass authId header returned from jwt-rest-service validation of jwt token
+    nginx.ingress.kubernetes.io/auth-response-headers: authId
   hosts:
     - host: account-rest-service.sonam.cloud
       paths:
@@ -56,6 +70,7 @@ ingress:
     - secretName: sonam.cloud
       hosts:
         - "*.sonam.cloud"
+
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
