--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,6 +28,6 @@ spring:
 activate-authentication-rest-service: http://authentication-rest-service-mychart.backend.svc.cluster.local:80/authentications/activate/
 email-rest-service: http://email-rest-service-mychart.backend.svc.cluster.local:80/email
 emailFrom: "kecha@sonam.email"
-account-activate-link: https://account-rest-service.sonam.cloud/accounts/activate
+account-activate-link: https://account-rest-service.sonam.cloud/public/accounts/activate
 emailBody: Please click on this link to activate your account
 secretExpire: 2
