--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -29,8 +29,19 @@ POSTGRES_DBNAME: dbname
 POSTGRES_SERVICE: dservice
 POSTGRES_PASSWORD: dpassword
 
-activate-user-rest-service: http://localhost:{port}/user/activate/
-activate-authentication-rest-service: http://localhost:{port}/authentications/activate/
+
+user-rest-service:
+  root: http://localhost:{port}
+  activate: /user/activate/
+  delete: /user/
+
+authentication-rest-service:
+  root: http://localhost:{port}
+  activate: /authentications/activate/
+  delete: /authentications/
+
+#activate-user-rest-service: http://localhost:{port}/user/activate/
+#activate-authentication-rest-service: http://localhost:{port}/authentications/activate/
 email-rest-service: https://email-rest-service.sonam.cloud/email
 emailFrom: ""
 account-activate-link: https://account-rest-service.sonam.cloud/accounts/activate
