--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,6 +56,7 @@ jobs:
 
       - name: Deploy to k8 cluster
         run: |
+          kubectl apply -f sealedsecret/account-rest-service-sealed.yaml
           export PROJECT_NAME=$(echo ${{ github.repository }} | cut -d / -f2)
           helm repo add sonam https://sonamsamdupkhangsar.github.io/sonam-helm-chart/
           helm upgrade --install --timeout 5m0s \
@@ -63,6 +64,4 @@ jobs:
             --set "image.tag=latest" \
             --set "project=$PROJECT_NAME" \
              $PROJECT_NAME \
-            sonam/mychart -f values-backend.yaml --version 0.1.21 --namespace=backend
-
-
+            sonam/mychart -f values-backend.yaml --version 0.1.26 --namespace=backend
