update secret and add email.from

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -54,7 +54,7 @@ hmacKey:
   algorithm: ${hmacKey.algorithm}
   secretKey: ${hmacKey.secretKey}
 
-emailFrom: "kecha@sonam.email"
+emailFrom: ${EMAIL_FROM}
 account-activate-link: ${ACCOUNT_ACTIVATE_LINK}
 emailBody: Please click on this link to activate your account
 secretExpire: 2
