--- a/values-backend.yaml
+++ b/values-backend.yaml
@@ -78,9 +78,19 @@ postgres:
   secretfile: sonam.account-minimal-cluster.credentials.postgresql.acid.zalan.do
   dbname: account
 
-
 envs:
-
+  - name: DB_SSLMODE
+    value: REQUIRE
+  - name: USER_REST_SERVICE
+    value: http://user-rest-service-mychart.backend.svc.cluster.local:80
+  - name: AUTHENTICATION_REST_SERVICE
+    value: http://authentication-rest-service-mychart.backend.svc.cluster.local:80
+  - name: JWT_REST_SERVICE
+    value: http://jwt-rest-service-mychart.backend.svc.cluster.local:80
+  - name: EMAIL_REST_SERVICE
+    value: http://email-rest-service-mychart.backend.svc.cluster.local:80
+  - name: ACCOUNT_REST_SERVICE
+    value: https://account-rest-service.backend.svc.cluster.local:80
 
 health:
   liveness:
@@ -95,3 +105,21 @@ health:
     initialDelaySeconds: 60
     periodSeconds: 5
     failureThreshold: 5
+
+secretFiles:
+  - file: eureka-discovery
+    keys:
+      - key: user
+        name: EUREKA_USER
+      - key: password
+        name: EUREKA_PASSWORD
+  - file: account-rest-service
+    keys:
+      - key: hmac.clientId
+        name: HMAC_CLIENTID
+      - key: hmac.algorithm
+        name: HMAC_ALGORITHM
+      - key: hmac.secret
+        name: HMAC_SECRET
+      - key: email.from
+        name: EMAIL_FROM
