--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,9 +23,10 @@ jobs:
           distribution: 'adopt'
 
       - name: Publish package
-        run: mvn --batch-mode deploy
+        run: mvn -s settings.xml --batch-mode deploy
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PERSONAL_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
 
       - name: Log in to the Container registry
         uses: docker/login-action@v2
@@ -43,6 +44,7 @@ jobs:
           tags: ghcr.io/sonamsamdupkhangsar/account-rest-service:latest
           secrets: |
             GIT_AUTH_TOKEN=${{ secrets.PERSONAL_ACCESS_TOKEN }}
+            PERSONAL_ACCESS_TOKEN=${{ secrets.PERSONAL_ACCESS_TOKEN }}
 
       - name: Install doctl
         uses: digitalocean/action-doctl@v2
@@ -54,6 +56,7 @@ jobs:
 
       - name: Deploy to k8 cluster
         run: |
+          kubectl apply -f sealedsecret/account-rest-service-sealed.yaml
           export PROJECT_NAME=$(echo ${{ github.repository }} | cut -d / -f2)
           helm repo add sonam https://sonamsamdupkhangsar.github.io/sonam-helm-chart/
           helm upgrade --install --timeout 5m0s \
@@ -61,6 +64,4 @@ jobs:
             --set "image.tag=latest" \
             --set "project=$PROJECT_NAME" \
              $PROJECT_NAME \
-            sonam/mychart -f values-backend.yaml --version 0.1.21 --namespace=backend
-
-
+            sonam/mychart -f values-backend.yaml --version 0.1.26 --namespace=backend
