--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -29,21 +29,71 @@ POSTGRES_DBNAME: dbname
 POSTGRES_SERVICE: dservice
 POSTGRES_PASSWORD: dpassword
 
-
 user-rest-service:
   root: http://localhost:{port}
-  activate: /user/activate/
-  delete: /user/
+  activate: /users/activate/
+  delete: /users/
 
 authentication-rest-service:
   root: http://localhost:{port}
   activate: /authentications/activate/
   delete: /authentications/
 
-#activate-user-rest-service: http://localhost:{port}/user/activate/
-#activate-authentication-rest-service: http://localhost:{port}/authentications/activate/
-email-rest-service: https://email-rest-service.sonam.cloud/email
+jwt-service:
+  root: http://localhost:{port}
+  public-key-id: /jwts/publickeys/{keyId}
+  accesstoken: /jwts/accesstoken
+
+email-rest-service:
+  root: http://localhost:{port}
+  emails: /emails
+
+account-rest-service:
+  root: http://localhost:{port}
+  activate: /accounts/activate
+
 emailFrom: ""
 account-activate-link: https://account-rest-service.sonam.cloud/accounts/activate
 emailBody: Please click on this link to activate your account
 secretExpire: 2
+
+eureka:
+  client:
+    enabled: false
+
+permitpath:
+  - path: /api/health/*
+  - path: /accounts/active/*/*
+    httpMethods: GET
+  - path: /accounts/activate/*/*
+    httpMethods: GET
+  - path: /accounts/emailactivationlink/*
+    httpMethods: PUT
+  - path: /accounts/emailmysecret/*
+    httpMethods: PUT
+  - path: /accounts/*/*
+    httpMethods: POST
+  - path: /accounts/email/authenticationId/*
+    httpMethods: PUT
+  - path: /accounts/validate/secret/*/*
+    httpMethods: PUT
+
+# request to create a jwt token for outbound `email` path when any requestcomes into /accounts/(.)* path (regex)
+jwtrequest:
+  - in: /accounts/(.)*/(.)*
+    out: /emails
+    jwt: request
+  - in:  /accounts/emailactivationlink/(.)*
+    out: /emails
+    jwt: request
+  - in: /accounts/emailmysecret/(.)*
+    out: /emails
+    jwt: request
+  - in: /accounts/email/authenticationId/(.)*
+    out: /emails
+    jwt: request
+
+hmacKey:
+  clientId: account-rest-service
+  algorithm: HmacMD5
+  secretKey: mysecret
