--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -8,9 +8,15 @@ POSTGRES_DBNAME: account2
 POSTGRES_SERVICE: localhost:5432
 DB_SSLMODE: disable
 
+EUREKA_HOST: localhost:8761
+EUREKA_USER: test
+EUREKA_PASSWORD: test
+
 eureka:
   client:
-    enabled: false
+    enabled: true
+
+DEFAULT_ZONE: http://${EUREKA_USER}:${EUREKA_PASSWORD}@${EUREKA_HOST}/eureka
 
 USER_REST_SERVICE: http://localhost:8084
 AUTHENTICATION_REST_SERVICE: http://localhost:8083
@@ -23,4 +29,4 @@ hmacKey:
   algorithm: HmacMD5
   secretKey: mysecret
 
-EMAIL_FROM: ${EMAIL_FROM}
+EMAIL_FROM: ${EMAIL_FROM_USER}
