--- a/values-backend.yaml
+++ b/values-backend.yaml
@@ -91,6 +91,9 @@ envs:
     value: http://email-rest-service-mychart.backend.svc.cluster.local:80
   - name: ACCOUNT_REST_SERVICE
     value: https://account-rest-service.backend.svc.cluster.local:80
+  - name: DEFAULT_ZONE
+    value: https://${EUREKA_USER}:${EUREKA_PASSWORD}@${EUREKA_HOST}/eureka
+
 
 health:
   liveness:
