--- a/values-backend.yaml
+++ b/values-backend.yaml
@@ -81,6 +81,8 @@ postgres:
 envs:
   - name: DB_SSLMODE
     value: REQUIRE
+  - name: EUREKA_HOST
+    value: discovery-service.sonam.cloud
   - name: USER_REST_SERVICE
     value: http://user-rest-service-mychart.backend.svc.cluster.local:80
   - name: AUTHENTICATION_REST_SERVICE
