--- a/values-backend.yaml
+++ b/values-backend.yaml
@@ -81,6 +81,8 @@ postgres:
 envs:
   - name: DB_SSLMODE
     value: REQUIRE
+  - name: EUREKA_HOST
+    value: discovery-service.sonam.cloud
   - name: USER_REST_SERVICE
     value: http://user-rest-service-mychart.backend.svc.cluster.local:80
   - name: AUTHENTICATION_REST_SERVICE
@@ -91,6 +93,9 @@ envs:
     value: http://email-rest-service-mychart.backend.svc.cluster.local:80
   - name: ACCOUNT_REST_SERVICE
     value: https://account-rest-service.backend.svc.cluster.local:80
+  - name: DEFAULT_ZONE
+    value: https://${EUREKA_USER}:${EUREKA_PASSWORD}@${EUREKA_HOST}/eureka
+
 
 health:
   liveness:
