--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -66,7 +66,7 @@ eureka:
       defaultZone: ${DEFAULT_ZONE}
 
 permitpath:
-  - path: /api/health/*
+  - path: /accounts/api/health/*
   - path: /accounts/active/*/*
     httpMethods: GET
   - path: /accounts/activate/*/*
