use jwt-validator 1.0.2

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -64,7 +64,7 @@ eureka:
     enabled: false
 
 permitpath:
-  - path: /api/health/*
+  - path: /accounts/api/health/*
   - path: /accounts/active/*/*
     httpMethods: GET
   - path: /accounts/activate/*/*
